--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-# ??
 server.port=80
+
+github.oauth.client_id=1aeb06facd0a0cde2309
+github.oauth.client_secret=98dba5e5b095402e9b3ce335a2fcb78c3a840bf0
+github.oauth.redirect_uri=http://127.0.0.1:80/callback
