--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,12 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-        </dependency>
+<!--        不会用，还得再研究-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-devtools</artifactId>-->
+<!--            <optional>true</optional>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
@@ -71,6 +73,37 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>3.0.1</version>
+        </dependency>
+
+        <!-- JUnit4 -->
+<!--        <dependency>-->
+<!--            <groupId>org.scalatestplus</groupId>-->
+<!--            <artifactId>junit-4-13_3.0.0-M2</artifactId>-->
+<!--            <version>3.3.0.0-SNAP3</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
+<!--        spring-boot-starter-test中附带有junit-jupiter(JUnit5)-->
+<!--        <dependency>-->
+<!--            <groupId>org.junit.jupiter</groupId>-->
+<!--            <artifactId>junit-jupiter</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
+        <!-- JUnit5中支持Junit4或JUnit3需要用到的引擎 -->
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+<!--            <version>5.9.2</version>-->
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Mockito：mock工具 -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
         </dependency>
 
 
