add:码匠笔记学习

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=80
 
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java,src/main/resources
+
 github.oauth.client_id=a9951ac7f088705f5d37
 github.oauth.client_secret=928085dae9f36dab821b646ba7120216e759ddd7
 github.oauth.redirect_uri=http://127.0.0.1:80/callback
